apps/base/customer1/trading-platform/routes/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trading-dashboard-route
  namespace: customer1
spec:
  parentRefs:
    - name: external-http-gateway
  hostnames:
    - "sirius-sec.com"
    - "www.sirius-sec.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /trade
      backendRefs:
        - name: trading-dashboard-svc
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trading-api-routes
  namespace: customer1
spec:
  parentRefs:
    - name: external-http-gateway
  hostnames:
    - "sirius-sec.com"
    - "www.sirius-sec.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/data
      backendRefs:
        - name: trading-data-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /api/execute
      backendRefs:
        - name: trading-execute-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /api/news
      backendRefs:
        - name: trading-news-service
          port: 80
